--- a/prometheus.yml
+++ b/prometheus.yml
@@ -42,6 +42,27 @@ scrape_configs:
         labels:                           
           job: 'vernemq'
 
+  - job_name: 'snmp'
+    static_configs:
+      - targets:
+        - 192.168.1.1  # SNMP device.
+        labels:                           
+          job: 'snmp'
+    metrics_path: /snmp
+    params:
+      module: [ddwrt]
+    relabel_configs:
+      - source_labels: [__address__]
+        target_label: __param_target
+      - source_labels: [__param_target]
+        target_label: instance
+      - target_label: __address__
+        replacement: snmp_exporter:9116  # The SNMP exporter's real hostname:po.
+    metric_relabel_configs:
+      - source_labels: ['__name__']
+        target_label: '__name__'
+        regex: '(.*)'
+        replacement: 'snmp_${1}'
 
   #- job_name: 'home-assistant'
   #  metrics_path: /api/prometheus
